<!--
 Copyright 2014 CloudMatch.io

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
     http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".PinchAndDragDemoActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/pinchanddragdescription"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/pinchanddrag_pinch_instruction_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:src="@drawable/pinch_icon"
        android:layout_centerInParent="true" />

    <io.ticofab.cm_android_sdk.library.views.CloudMatchPinchViewHorizontal
        android:id="@+id/pinch_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/shapes_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/circle_shape"
            android:layout_width="@dimen/shape_size"
            android:layout_height="@dimen/shape_size"
            android:layout_marginBottom="90dp"
            android:src="@drawable/circle_shape"
            android:tag="@string/circle"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/rect_shape"
            android:layout_width="@dimen/shape_size"
            android:layout_height="@dimen/shape_size"
            android:src="@drawable/square_shape"
            android:tag="@string/rect"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/left_view"
        android:layout_width="@dimen/side_area_side"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true" />

    <RelativeLayout
        android:id="@+id/right_view"
        android:layout_width="@dimen/side_area_side"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true" />

    <RelativeLayout
        android:id="@+id/center_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/right_view"
        android:layout_toRightOf="@+id/left_view" />

</RelativeLayout>